# forcez

./: .gitignore  CMakeLists.txt  LICENSE  config.h.in  main.cc  mingw_x86_64_toolchain.cmake
include/: forcez.h
include/forcez/: argp.h  book.h  conf.h  forcez.h  worker.h
src/: CMakeLists.txt  main.cc
src/forcez/: CMakeLists.txt  argp.cc  book.cc  conf.cc  forcez.cc  worker.cc
src/utils/: book_handle.h  forcez.h
utils/: book.h  forcez.h  init.h
